Fixed bug where Axel's insane ticket count overflows ticket list

--- a/v2/styles/style.css
+++ b/v2/styles/style.css
@@ -282,3 +282,8 @@ hr {
 .smallText {
 	font-size: 70%;
 }
+
+#seatableTickets {
+	overflow:scroll;
+	height: 200px;
+}
